--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </p>
 </div>
 <div class="footer">
-    Contact Professor Bairstone: profbairstone@intrepidexplorer.com
+    For more informations contacts gertbank954@gmail.com. Thank You for visiting our website!
 </div>
 </body>
 </html>
