--- a/exhibition.html
+++ b/exhibition.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The Discovery</title>
+    <title>Exhibition</title>
 
     <style>
         body {
@@ -27,7 +27,7 @@
             background: url(diamond.jpg);
             background-size: cover;
             width: auto;
-            height: 200px;
+            height: 400px;
             text-align: center;
             font-size: 52px;
             padding-top: 75px;
@@ -36,45 +36,51 @@
 
         .content {
             min-height: 500px;
-            padding-top: 50px;
-            padding-bottom: 50px;
+            padding: 50px;
             font-size: 18px;
             background-color: white;
             color: black;
         }
 
         .footer {
+            width: 100%;
             height: 120px;
             padding: 50px;
             text-align: center;
             font-size: 20px;
-      color:#1806E8;
+      color: #1806E8;
         }
     </style>
 </head>
 <body>
 <div class="header">
-    <a href="index.html">Home</a>/ <a href="diamond.html">The Diamond</a> / <a href="exhibition.html">Exhibition</a> / <a href="volkov.html">The House of Volkov</a>
+    <a href="index.html">Home</a>/ <a href="diamond.html">The Diamond</a> / <a href="discovery.html">Discovery</a> /<a href="volkov.html">The House of Volkov</a>
 </div>
 <div class="banner">
-    The Discovery of the Monk Diamond
+    The Special Exhibition
 </div>
-
 <div class="content">
+    <p style="font-size: 32px; font-weight: bold;">The Special Exhibition</p>
+     <p>
+        The House of Volkov<br/>
+         Opening times
+     </p>
 
-    <div style="width: 80%; padding-top: 50px; float: left;">
-        <p style="padding-left: 50px; padding-right: 50px;">
-            Professor Bairstone and Dr Day, along with Ernest the dog, were on an
-            expedition in Siberia when they discovered the Monk Diamond.<br/>It had
-            been hidden in a remote mountain cave.<br/>The Bond Brothers attempted to
-            sabotage the expedition and reclaim the diamond but were unsuccessful.<br/>
-            The team returned to Moscow with the diamond and a special exhibition is
-            being held at the House of Volkov to celebrate their discovery.
-        </p>
+    <div>
+        Monday to Friday
     </div>
-
-    <div style="width: 20%; padding-top: 50px; float: left;">
-        <img src="diamond.jpg" style="width: 120px;"/>
+    <div style="margin: 10px;">
+        9.30–6.00<br/>
+        Last admission 5.30
+    </div>
+    <div>
+        Saturdays and Sundays</div>
+    <div style="margin: 10px;">
+        11.00–4.00<br/>
+        Last admission 3.30</div>
+    <div>
+        Admission: Free<br/>
+        Please note cameras are not allowed inside the House of Volkov.
     </div>
 
 </div>
